--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma-rtl.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Project Guess color</title>
 </head>
 <body>
-  <header>
-    <h1 id="title">Adivinhe as cores</h1>
-  </header>
-
-  <div id="wrapper-rbg">
-    <p id="rgb-color">(168, 34, 1)</p>
-    <p>Placar: <span id="score">0</span></p>
+  
+  <div class="section">
+    <header>
+      <h1 id="title" class="title">Adivinhe as cores</h1>
+    </header>
+  
+    <div id="wrapper-rbg">
+      <p id="rgb-color" class="subtitle">(168, 34, 1)</p>
+      <p class="subtitle">Placar: <span class="subtitle" id="score">0</span></p>
+    </div>
+  
+    <div id="wrapper-balls"></div>
+    <p id="answer" class="subtitle">Escolha uma cor</p>
+    <div id="wrapper-btns">
+      <button id="reset-game" class="button is-success" onclick="reload();">Resetar cores</button>
+    </div>
   </div>
 
-  <div id="wrapper-balls"></div>
-  <p id="answer">Escolha uma cor</p>
-  <div id="wrapper-btns">
-    <button id="reset-game" onclick="reload();">Resetar cores</button>
-  </div>
   
 
   <script src="script.js"></script>
